# qjs-sound

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO.md  analog-drums.hpp  aubio-test.js  classes.txt  cpputils.h  cpputils.hpp  defines.h  drumsampler-test.js  drumsampler.js  effects.js  fx-test.js  portaudio-test.js  qjs-sound.sublime-workspace  quickjs-aubio.c  quickjs-labsound.cpp  quickjs-labsound.hpp  quickjs-portaudio.c  quickjs-stk.cpp  shakers-test.js  synth-test.js  synth.js  test-labsound.cpp  test-labsound.hpp  test-labsound.js  tr909bassdrum-test.js  tr909percussion-test.js  track-test.js  twint2-test.js  twintdrum-test.js  webaudio-test.js
cmake/: CheckFlags.cmake  FindQuickJS.cmake  QuickJSModule.cmake  UseMultiArch.cmake  check-flags.cmake
cmake/patches/: aubio-static-lib.patch
doc/: aubio.md  stk-io.md
